# BallPlate

./: .clangd  .gitignore  Cargo.toml  add_gcc_path.py  memory.x  platformio.ini
crates/ball-plate-fw/: Cargo.toml
crates/ball-plate-fw/src/: config.rs  lib.rs  main.rs  shared.rs
crates/ball-plate-fw/src/drivers/: pca9685.rs
crates/ball-plate-fw/src/tasks/: camera.rs  control.rs  led.rs  mod.rs  remote_uart.rs  telemetry.rs
crates/ball-plate-pid/: Cargo.toml
crates/ball-plate-pid/src/: lib.rs
crates/ball-plate-protocol/: Cargo.toml
crates/ball-plate-protocol/src/: command.rs  crc8.rs  dispatcher.rs  framer.rs  lib.rs  packet.rs  tests.rs
include/: config.hpp
lib/PID/: pid_controller.hpp
lib/Remote/: PROTOCOL.md  command_dispatcher.hpp  command_receiver.hpp  remote_command.hpp  serial_receiver.hpp
lib/ServoDriver/: arduino_servo.hpp  pca9685_servo.hpp  servo_interface.hpp  stm32_pwm_servo.hpp
src/: config.hpp  control_loop.hpp  host_report.hpp  main.cpp  pid_controller.hpp  pos_provider.hpp  uart_pos_provider.hpp
src/pid/: pid_controller.hpp
src/position/: pos_provider.hpp  uart_pos_provider.hpp
src/remote/: remote_handler.hpp
src/servo/: pca9685_servo.hpp  servo_interface.hpp
test/support/: Arduino.h
test/test_pid_controller/: test_pid_controller.cpp
test/test_remote/: test_remote.cpp
