[package]
name = "ball-plate-fw"
version = "0.1.0"
edition = "2024"

[dependencies]
# Embassy runtime
embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-stm32 = { version = "0.2", features = [
    "defmt",
    "stm32f407zg",
    "memory-x",
    "time-driver-any",
] }

# Cortex-M runtime + panic/logging
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Async IO traits (needed for BufferedUart read/write)
embedded-io-async = "0.6.1"

# Utils
heapless = "0.8"
static_cell = "2"

# Local crates
ball-plate-pid = { path = "../ball-plate-pid" }
ball-plate-protocol = { path = "../ball-plate-protocol" }

[features]
# Keep parity with the C++ firmware: telemetry over UART can be compiled out.
default = ["telemetry", "remote-uart"]
telemetry = []
remote-uart = []
remote-nrf24 = []
